[gd_scene load_steps=25 format=3 uid="uid://86tq3blbo8rs"]

[ext_resource type="Script" uid="uid://bl2cub7bc84g5" path="res://Scripts/initialiser.gd" id="1_50glp"]
[ext_resource type="Script" uid="uid://bu55c8rfhtrsl" path="res://Scripts/camera.gd" id="2_vy5pj"]
[ext_resource type="Script" uid="uid://bb51tcti0v1ae" path="res://Scripts/message.gd" id="3_bmxlf"]
[ext_resource type="Texture2D" uid="uid://da0t66iwxuyxq" path="res://Sprites/textbox_yellow.png" id="4_4kpch"]
[ext_resource type="FontFile" uid="uid://bn56m5j1acs0j" path="res://Misc/Fonts/Georgia.ttf" id="5_grg3l"]
[ext_resource type="Texture2D" uid="uid://c7mfwjyhhq810" path="res://Sprites/textbox.png" id="5_vy5pj"]
[ext_resource type="Script" uid="uid://ddx5i8d1mr1lo" path="res://Scripts/map_generator.gd" id="6_frkhe"]
[ext_resource type="Script" uid="uid://cal2wnxopwt2h" path="res://Scripts/terrain_grouper.gd" id="7_1p5hy"]
[ext_resource type="Script" uid="uid://vp1q6c1vpebf" path="res://Scripts/mouse.gd" id="8_h1m7h"]

[sub_resource type="GDScript" id="GDScript_wxdwa"]
script/source = "extends CanvasLayer

@onready var _texRect:TextureRect = $Control/TextureRect;
@export var _noiseTexture:TextureRect;


func _ready() -> void:
	_texRect.size = _noiseTexture.texture.get_size() * World.CellSize;
	#_texRect.size = _noiseTexture.size;
	#
	#_texRect.modulate.a = 0;
	#self.show();
	#
	#var cloudTween:Tween = create_tween();
	#cloudTween.set_trans(Tween.TRANS_SINE);
	#cloudTween.set_ease(Tween.EASE_IN_OUT);
	#cloudTween.tween_property(_texRect, \"modulate:a\", .5, 4);
#
#
func _process(delta: float) -> void:
	_texRect.texture.noise.offset.x -= delta * 4;
"

[sub_resource type="Gradient" id="Gradient_k6548"]
offsets = PackedFloat32Array(0, 0.34728, 1)
colors = PackedColorArray(1, 1, 1, 0.490196, 1, 1, 1, 0, 0, 0, 0, 0.392157)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_sial6"]
offset = Vector3(770.44, 0, 0)
fractal_octaves = 4
fractal_lacunarity = 1.0
fractal_weighted_strength = 1.0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2n0ns"]
width = 64
height = 64
invert = true
generate_mipmaps = false
seamless_blend_skirt = 1.0
color_ramp = SubResource("Gradient_k6548")
noise = SubResource("FastNoiseLite_sial6")

[sub_resource type="GDScript" id="GDScript_ho7ea"]
resource_name = "curtain"
script/source = "extends CanvasLayer

@onready var colRect:ColorRect = $Control/ColorRect;


func _init() -> void:
	self.show();


func _ready() -> void:
	var curtainTween:Tween = create_tween();
	curtainTween.set_trans(Tween.TRANS_SINE);
	curtainTween.set_ease(Tween.EASE_IN_OUT);
	curtainTween.tween_property(colRect, \"modulate:a\", 0, 4);
	
	await curtainTween.finished;
	
	self.hide();
"

[sub_resource type="GDScript" id="GDScript_vy5pj"]
resource_name = "message_button"
script/source = "extends Button

@onready var _message:Node2D = get_parent().get_parent();


func _ready() -> void:
	self.button_down.connect(_Click);


func _unhandled_key_input(event: InputEvent) -> void:
	if event.is_action_pressed(\"Enter\"):
		_message.Disappear(self.get_path());


func _Click() -> void:
	_message.Disappear(self.get_path());
"

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_svxh6"]
content_margin_left = 2.0
content_margin_right = 2.0

[sub_resource type="FontVariation" id="FontVariation_svxh6"]
base_font = ExtResource("5_grg3l")

[sub_resource type="LabelSettings" id="LabelSettings_ormxn"]
line_spacing = 0.0
font_size = 8
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_g2m6q"]
noise_type = 5
frequency = 0.04
fractal_weighted_strength = 0.1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ue23j"]
width = 64
height = 64
invert = true
generate_mipmaps = false
seamless_blend_skirt = 1.0
noise = SubResource("FastNoiseLite_g2m6q")

[sub_resource type="GDScript" id="GDScript_c1oqp"]
resource_name = "lighting"
script/source = "@icon(\"res://Misc/icons/asterisk_icon_yellow.png\")
extends Node2D
"

[sub_resource type="Gradient" id="Gradient_lnlyj"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.0502092, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_snou4"]
gradient = SubResource("Gradient_lnlyj")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.85, 0.15)

[sub_resource type="GDScript" id="GDScript_cl1kf"]
resource_name = "sun"
script/source = "extends PointLight2D

const _dayDur:float = 60;
const _nightDur:float = 30;

var _worldCenter:Vector2;

var _rising:bool = true;

var _posTween:Tween;
var _energyTween:Tween;


func _ready() -> void:
	# Wait for Initial Map Generation
	#World.Initial_MapGen_Complete.connect(_On_Initial_MapGen_Complete);
	pass;


func _unhandled_key_input(event: InputEvent) -> void:
	if event.is_action_pressed(\"Zero\"):
		if _posTween != null:
			_posTween.stop();
			_energyTween.stop();
		if _rising:
			#self.position.x = _worldCenter.x;
			_Set(_nightDur);
		else:
			_Rise(_dayDur);


func _Rise(duration:float) -> void:
	
	#self.position.x = _worldCenter.x + World.MapWidth() / 2;
	
	#_posTween = create_tween();
	#_posTween.set_trans(Tween.TRANS_CUBIC);
	#_posTween.set_ease(Tween.EASE_OUT);
	#_posTween.tween_property(self, \"position:x\", _worldCenter.x, duration);
	
	_rising = !_rising;
	var sun_energy:float = _rising;
	
	_energyTween = create_tween();
	_energyTween.set_trans(Tween.TRANS_CUBIC);
	_energyTween.set_ease(Tween.EASE_OUT);
	_energyTween.tween_property(self, \"energy\", sun_energy, duration);
	
	await _energyTween.finished;
	
	_Set(_nightDur);


func _Set(duration:float) -> void:
	
	#var endX:float = _worldCenter.x - World.MapWidth() / 2;
	#
	#_posTween = create_tween();
	#_posTween.set_trans(Tween.TRANS_CUBIC);
	#_posTween.set_ease(Tween.EASE_IN);
	#_posTween.tween_property(self, \"position:x\", endX, duration);
	
	_rising = !_rising;
	var sun_energy:float = _rising;
	sun_energy += 0.05;
	
	_energyTween = create_tween();
	_energyTween.set_trans(Tween.TRANS_CUBIC);
	_energyTween.set_ease(Tween.EASE_OUT);
	_energyTween.tween_property(self, \"energy\", sun_energy, duration);
	
	await _energyTween.finished;
	
	await get_tree().create_timer(_nightDur).timeout;
	
	_Rise(_dayDur);


# Functions: Signals ||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||


func _On_Initial_MapGen_Complete() -> void:
	_worldCenter = Vector2.ONE * (World.MapWidth() / 2) * World.CellSize;
	self.position = _worldCenter;
	await get_tree().create_timer(60).timeout;
	_Set(_nightDur);
	
"

[node name="Main" type="Node2D"]

[node name="initialiser" type="Node" parent="." node_paths=PackedStringArray("_mapGen", "_cont_showOnZoom", "_cam", "_message")]
script = ExtResource("1_50glp")
_mapGen = NodePath("../map_generator")
_cont_showOnZoom = NodePath("../map_generator/show_on_zoom")
_cam = NodePath("../Camera2D")
_message = NodePath("../message")

[node name="Clouds" type="CanvasLayer" parent="." node_paths=PackedStringArray("_noiseTexture")]
follow_viewport_enabled = true
script = SubResource("GDScript_wxdwa")
_noiseTexture = NodePath("../map_generator/Noise/Control/Noise Rect")

[node name="Control" type="Control" parent="Clouds"]
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 2040.0
offset_bottom = 2040.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Clouds/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("NoiseTexture2D_2n0ns")
stretch_mode = 6

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("_initialiser", "_hide_on_zoom", "_show_on_zoom")]
position = Vector2(0, 1)
script = ExtResource("2_vy5pj")
_initialiser = NodePath("../initialiser")
_hide_on_zoom = NodePath("../map_generator/hide_on_zoom")
_show_on_zoom = NodePath("../map_generator/show_on_zoom")

[node name="Curtain" type="CanvasLayer" parent="."]
visible = false
script = SubResource("GDScript_ho7ea")

[node name="Control" type="Control" parent="Curtain"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Curtain/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="message" type="Node2D" parent="."]
z_index = 1000
z_as_relative = false
position = Vector2(1014, 801)
script = ExtResource("3_bmxlf")

[node name="NinePatchRect" type="NinePatchRect" parent="message"]
offset_right = 128.0
offset_bottom = 128.0
scale = Vector2(0.125, 0.125)
texture = ExtResource("4_4kpch")
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="Button" type="Button" parent="message/NinePatchRect"]
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -48.0
scale = Vector2(0.125, 0.125)
action_mode = 0
icon = ExtResource("5_vy5pj")
icon_alignment = 1
script = SubResource("GDScript_vy5pj")

[node name="PanelContainer" type="PanelContainer" parent="message"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.5
offset_right = 55.5
offset_bottom = 9.33333
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxEmpty_svxh6")

[node name="Label" type="Label" parent="message/PanelContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_svxh6")
text = "Fortune favours the prepared."
label_settings = SubResource("LabelSettings_ormxn")
vertical_alignment = 1

[node name="map_generator" type="Node2D" parent="." node_paths=PackedStringArray("_noiseTex")]
script = ExtResource("6_frkhe")
_noiseTex = NodePath("Noise/Control/Noise Rect")
metadata/_edit_lock_ = true

[node name="terrain" type="Node2D" parent="map_generator"]
z_index = -1
y_sort_enabled = true
metadata/_edit_lock_ = true

[node name="hide_on_zoom" type="Node2D" parent="map_generator"]
z_index = 1
y_sort_enabled = true
metadata/_edit_lock_ = true

[node name="show_on_zoom" type="Node2D" parent="map_generator"]
z_index = 1
y_sort_enabled = true
metadata/_edit_lock_ = true

[node name="always_show" type="Node2D" parent="map_generator"]
metadata/_edit_lock_ = true

[node name="treasures" type="CanvasLayer" parent="map_generator"]
follow_viewport_enabled = true

[node name="Noise" type="CanvasLayer" parent="map_generator"]
visible = false

[node name="Control" type="Control" parent="map_generator/Noise"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Noise Rect" type="TextureRect" parent="map_generator/Noise/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_ue23j")
stretch_mode = 5

[node name="terrain_grouper" type="Node" parent="map_generator"]
script = ExtResource("7_1p5hy")

[node name="lighting" type="Node2D" parent="."]
visible = false
script = SubResource("GDScript_c1oqp")

[node name="Sun" type="PointLight2D" parent="lighting"]
position = Vector2(1024, 1024)
scale = Vector2(64, 64)
color = Color(1, 0.983333, 0.9, 1)
energy = 0.9
texture = SubResource("GradientTexture2D_snou4")
script = SubResource("GDScript_cl1kf")

[node name="CanvasModulate" type="CanvasModulate" parent="lighting"]
color = Color(0.03, 0.0918333, 0.1, 1)

[node name="mouse" type="Node2D" parent="." node_paths=PackedStringArray("_mapGen")]
z_index = 10
script = ExtResource("8_h1m7h")
_mapGen = NodePath("../map_generator")
metadata/_edit_lock_ = true

[node name="Background" type="CanvasLayer" parent="."]
layer = -1
follow_viewport_enabled = true

[node name="Control" type="Control" parent="Background"]
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 1016.0
offset_bottom = 1016.0

[node name="ColorRect" type="ColorRect" parent="Background/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.929412, 0.909804, 0.705882, 1)
